<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Naier</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- NaierBaseAvtivity -->
    <string name="network_prompt">抱歉，网络连接好像有点问题，请稍后重试。</string>
    <string name="plistview_header_hint_normal">下拉刷新</string>
    <string name="plistview_header_hint_ready">松开刷新数据</string>
    <string name="plistview_header_hint_loading">正在加载&#8230;</string>
    <string name="plistview_header_last_time">上次更新时间：</string>
    <string name="plistview_footer_hint_normal">上拉查看更多</string>
    <string name="plistview_footer_hint_ready">松开载入更多</string>

    <!-- NaierTabAvtivity -->
    <string name="exit_prompt">再按一次退出程序</string>
    <!-- NaierHomePageAvtivity -->


    <!-- NaierMoreAvtivity -->
    <string name="more_title">更多</string>
    <string name="more_txt_login">登录</string>
    <string name="more_txt_persional">个人中心</string>
    <string name="more_txt_register">注册</string>
    <string name="more_txt_aboutus">关于我们</string>
    <string name="more_txt_callcenter">呼叫顾问</string>
    <string name="more_txt_feedback">意见反馈</string>
    <string name="more_txt_copyright">版权说明</string>

    <!-- NaierPrivateSecretaryAvtivity -->
    <string name="naier_privatesecretary_input">请输入搜索内容</string>
    <string name="naier_privatesecretary_area">区域</string>
    <string name="naier_privatesecretary_industry">行业</string>
    <string name="private_secretry_list_default_string">抱歉，未找到相关数据~</string>
    <string name="private_secretry_loading_data">正在加载数据......</string>
    <!-- LogineAvtivity -->
    <string name="login_title">登录</string>
    <string name="login_username_hint">请输入账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_txt">登  录</string>
    <string name="login_register_txt">立即注册</string>
    <!-- RegisterAvtivity -->
    <string name="register_title">注册</string>
    <string name="register_username">账&#160;&#160;&#160;&#160;号</string>
    <string name="register_password">密&#160;&#160;&#160;&#160;码</string>
    <string name="register_name">联系人</string>
    <string name="register_phone">手机号码</string>
    <string name="register_address">地&#160;&#160;&#160;&#160;址</string>
    <string name="register_address_hint">详细地址，以供我们上门服务</string>
    <string name="register_btn_text">注册并登录</string>
    <!-- PersonalAvtivity -->
    <string name="personal_title">个人中心</string>
    <string name="personal_name_text"><Data><![CDATA[尊敬的<font color="#ff0000">%1$s</font>,欢迎您！]]></Data></string>
    <string name="personal_pwd_text">密码:%1$s</string>
    <string name="personal_phone_text">手机:%1$s</string>
    <string name="personal_address_text">地址:%1$s</string>
    <string name="personal_btn_changepwd">修改密码</string>
    <string name="personal_btn_change">去修改</string>
    <string name="personal_listtitle_photo">形象</string>
    <string name="personal_listtitle_name">姓名</string>
    <string name="personal_listtitle_time">时间</string>
    <string name="personal_listtitle_type">服务类型</string>
    <string name="personal_orderlist">您的预约记录</string>
    <string name="personal_no_orderlist">您还没有预约记录~</string>
    <!-- AboutusAvtivity -->
    <string name="aboutus_title">关于我们</string>
    <string name="aboutus_contact_txt">地址：%1$s\n电话：%2$s\n邮箱：%3$s\nQ&#160;&#160;&#160;Q：%4$s\n</string>

    <!-- 管家详细 -->
    <string name="housekeeper_detail_servie_level">服务等级</string>
    <string name="housekeeper_detail_servie_career">专  业</string>
    <string name="housekeeper_detail_servie_manner">态  度</string>
    <string name="housekeeper_detail_servie_hardworking">勤  劳</string>
    <string name="housekeeper_detail_servie_careful">细  心</string>
    <string name="housekeeper_detail_servie_speciality">特  长</string>
    <string name="housekeeper_detail_introduce">简介</string>

</resources>