<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <include layout="@layout/naier_top_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@color/grey_white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_edt_username"
            style="@style/login_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_bg_username"
            android:hint="@string/login_username_hint" />

        <EditText
            android:id="@+id/login_edt_password"
            style="@style/login_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg_password"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_btn_selector"
        android:onClick="clickButton"
        android:text="@string/login_txt"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="25dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical" >

        <com.wwmi.naier.view.NaierTextView
            android:id="@+id/login_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:clickable="true"
            android:onClick="clickButton"
            android:text="@string/login_register_txt"
            android:textColor="@color/grey_white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="right"
            android:background="@color/white" />
    </LinearLayout>

</LinearLayout>