<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <include layout="@layout/naier_top_title_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <ImageView
            android:id="@+id/btn_private_secretary_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:src="@drawable/secretary_btn_bg_search_selector" />

        <EditText
            android:id="@+id/edt_private_secretary_searchinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="3dp"
            android:layout_toLeftOf="@id/btn_private_secretary_search"
            android:background="@drawable/secretary_edt_bg_search"
            android:hint="@string/naier_privatesecretary_input"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_private_secretary_area"
                style="@style/private_secretry_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/private_secretary_area_selector"
                android:text="@string/naier_privatesecretary_area"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_private_secretary_industry"
                style="@style/private_secretry_industry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/private_secretary_industry_selector"
                android:text="@string/naier_privatesecretary_industry"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_private_secretry_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/private_secretry_list_default_string"
                android:textColor="@color/white"
                android:visibility="gone" />

            <com.wwmi.naier.view.plistview.PListView
                android:id="@+id/lst_private_secretary_infor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/secretary_list_bg"
                android:divider="@color/grey_black"
                android:dividerHeight="1dp"
                android:scrollbars="none" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>